[package]
name = "fuzzer"
version = "0.1.0"
edition = "2024"

# ── Dependencies ──────────────────────────────────────────────────────────────

[dependencies]
# LibAFL fuzzing engine and bolt-on utilities.
libafl       = {version = "0.15.4",  features = ["tui_monitor"] }
libafl_bolts = "0.15.4"

# Wayland session replayer.
#
# Used by the live harness to drive a compositor with mutated Wayland wire
# streams. The public API surface consumed by the fuzzer:
#
#   wl_repeater::protocol::Protocol          – load Wayland XML descriptors
#   wl_repeater::ir::IrReader                – deserialise .wlir trace files
#   wl_repeater::repeater::Repeater          – replay C→S messages against a compositor
#   wl_repeater::message::WaylandMessage     – canonical per-message type
#
# Replay runs in-process today; future compositor supervision and
# target-side coverage work will change execution boundaries, not this
# dependency relationship.
wl_repeater  = { path = "../wl_repeater" }

[dev-dependencies]
tempfile = "3"

# ── Feature flags ─────────────────────────────────────────────────────────────

[features]
# Placeholder feature retained from the original scaffold; remove or repurpose
# once real feature gating is needed (e.g. "shmem_coverage", "fork_executor").
panic = []
tui = []
